# criterion.rs

./: Cargo.toml  cog.toml  search-index.js  settings.html
.github/workflows/: ci.yaml  cog.yaml
criterion/: all.html  enum.AxisScale.html  enum.Baseline.html  enum.BatchSize.html  enum.PlottingBackend.html  enum.SamplingMode.html  enum.Throughput.html  fn.black_box.html  index.html  macro.criterion_group.html  macro.criterion_main.html  struct.AsyncBencher.html  struct.Bencher.html  struct.BenchmarkGroup.html  struct.BenchmarkId.html  struct.Criterion.html  struct.PlotConfiguration.html
criterion/async_executor/: index.html  struct.AsyncStdExecutor.html  struct.FuturesExecutor.html  struct.SmolExecutor.html  trait.AsyncExecutor.html
criterion/measurement/: index.html  struct.WallTime.html  trait.Measurement.html  trait.ValueFormatter.html
criterion/profiler/: index.html  struct.ExternalProfiler.html  trait.Profiler.html
criterion_plot/: all.html  enum.Axes.html  enum.Axis.html  enum.Color.html  enum.Grid.html  enum.LineType.html  enum.PointType.html  enum.Range.html  enum.Scale.html  enum.Terminal.html  enum.VersionError.html  fn.version.html  index.html  struct.BoxWidth.html  struct.Figure.html  struct.Font.html  struct.FontSize.html  struct.Key.html  struct.Label.html  struct.LineWidth.html  struct.Opacity.html  struct.Output.html  struct.PointSize.html  struct.ScaleFactor.html  struct.Size.html  struct.TicLabels.html  struct.Title.html  struct.Version.html
criterion_plot/axis/: index.html  struct.Properties.html
criterion_plot/candlestick/: index.html  struct.Candlesticks.html  struct.Properties.html
criterion_plot/curve/: enum.Curve.html  index.html  struct.Properties.html
criterion_plot/errorbar/: enum.ErrorBar.html  index.html  struct.Properties.html
criterion_plot/filledcurve/: index.html  struct.FilledCurve.html  struct.Properties.html
criterion_plot/grid/: index.html  struct.Properties.html
criterion_plot/key/: enum.Boxed.html  enum.Horizontal.html  enum.Justification.html  enum.Order.html  enum.Position.html  enum.Stacked.html  enum.Vertical.html  index.html  struct.Properties.html
criterion_plot/prelude/: index.html
criterion_plot/proxy/: fn.Font.html  fn.Label.html  fn.Output.html  fn.Title.html  index.html
criterion_plot/traits/: index.html  trait.Configure.html  trait.Data.html  trait.Plot.html  trait.Set.html
implementors/serde/de/: trait.Deserialize.js
implementors/serde/ser/: trait.Serialize.js
plot/src/: lib.rs
src/: benchmark_group.rs  lib.rs  report.rs  routine.rs
src/analysis/: compare.rs  mod.rs
src/criterion/: async_executor.rs.html  bencher.rs.html  benchmark.rs.html  benchmark_group.rs.html  connection.rs.html  csv_report.rs.html  error.rs.html  estimate.rs.html  format.rs.html  fs.rs.html  kde.rs.html  lib.rs.html  macros.rs.html  macros_private.rs.html  measurement.rs.html  profiler.rs.html  report.rs.html  routine.rs.html
src/criterion/analysis/: compare.rs.html  mod.rs.html
src/criterion/html/: mod.rs.html
src/criterion/plot/: mod.rs.html
src/criterion/plot/gnuplot_backend/: distributions.rs.html  iteration_times.rs.html  mod.rs.html  pdf.rs.html  regression.rs.html  summary.rs.html  t_test.rs.html
src/criterion/stats/: float.rs.html  mod.rs.html  rand_util.rs.html  tuple.rs.html
src/criterion_plot/: axis.rs.html  candlestick.rs.html  curve.rs.html  data.rs.html  display.rs.html  errorbar.rs.html  filledcurve.rs.html  grid.rs.html  key.rs.html  lib.rs.html  map.rs.html  prelude.rs.html  proxy.rs.html  traits.rs.html
(+21 files in other folders)
